# clip-tokenizer-rs

./: .gitattributes  .gitignore  .releaserc.json  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  index.d.ts  index.js  index.test.ts  package.json  renovate.json
.beads/: issues.jsonl
.claude/: settings.json
.claude/hooks/: post-edit.sh  protect-secrets.sh  session-start.sh
.github/: dependabot.yml
.github/workflows/: ci.yml
scripts/: generate-fixtures.ts
src/: lib.rs
tests/: conformance.test.ts
tests/fixtures/: README.md  clip-tokens.json
