[package]
name = "clip-tokenizer-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3", features = ["napi4"] }
napi-derive = "3"
instant-clip-tokenizer = "0.1"
flate2 = "1.0"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
